WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245822
Return nullptr if CVPixelBufferCreate call failed
https://bugs.webkit.org/show_bug.cgi?id=245822
Summary
Return nullptr if CVPixelBufferCreate call failed
Rob Buis
Reported
2022-09-29 03:01:00 PDT
Return nullptr if CVPixelBufferCreate call failed.
Attachments
Patch
(1.30 KB, patch)
2022-09-29 03:02 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2022-09-29 03:02:12 PDT
Created
attachment 462700
[details]
Patch
EWS
Comment 2
2022-09-29 07:14:47 PDT
Committed
254995@main
(aec84ac532fe): <
https://commits.webkit.org/254995@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462700
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-09-29 07:15:20 PDT
<
rdar://problem/100561431
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug