Return nullptr if CVPixelBufferCreate call failed https://bugs.webkit.org/show_bug.cgi?id=245822

Reviewed by Youenn Fablet.

Return nullptr if CVPixelBufferCreate call failed.

* Source/WebCore/platform/graphics/cv/CVUtilities.mm:
(WebCore::createBlackPixelBuffer):

Canonical link: https://commits.webkit.org/254995@main